Поправил верстку, часть советы Клода, часть потом сам еще менял, изменил размеры в зоны контента в variables, поправил списки и отступы у заголовков. Но нужно еще; 1 удалить лишнии стили из scss; 2 сделать возможность централизовано изменять размеры шрифтов; 3 сделать шрифт больше; 4 сделать чтобы размер шрифта менялся при переходи к совсем маленьким экранам; 5 протестировать на разных экранах; 6 настроить цвета, размеры щаголовков, отступы между постами 7 настроить сайдбар и лендинг страницу

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,33 +1,18 @@
-<div id="search-3" class="sidebar-widget widget_search">
-    <h2 class="widgettitle">Search</h2>
-    <form role="search" method="get" id="searchform" class="searchform" action="{{ site.baseurl }}/search/">
-      <div>
-        <label class="screen-reader-text" for="s">Search for:</label>
-        <input type="text" value="" name="s" id="s" />
-        <input type="submit" id="searchsubmit" value="" />
-      </div>
-    </form>
-  </div>
-  
-  <div class="sidebar-widget widget_feedblitz_subscription">
-    <h2 class="widgettitle">Subscribe</h2>
-    <div id="subscribeform">
-      <div class="sidebar-sub-container">
-        <form action="{{ site.baseurl }}/" method="post">
-          <input value="" class="feedblitz-email" type="email" name="email" placeholder="me@email.com">
-          <input class="feedblitz-email-submit" type="submit" value="Sign Up" title="Click to Join">
-        </form>
-      </div>
-      <small class="feedblitz-privacy-links">
-        Email 
-        <a target="_blank" rel="nofollow" title="Email subscriptions terms of service" class="feedblitz-terms-privacy" href="#">
-          Terms
-        </a> &amp;
-        <a title="Email subscriptions privacy policy" target="_blank" rel="nofollow" class="feedblitz-terms-privacy" href="#">
-          Privacy
-        </a>
-      </small>
-    </div>
-  </div>
+<div class="links scroll">
+  <span style="white-space: nowrap">
+    <a href="{{site.baseurl}}/blog/">📖Читать блог</a></span><br>
+  <span style="white-space: nowrap">
+    <a href="{{site.baseurl}}/">🧭Обо мне</a></span><br>
+  <span style="white-space: nowrap">
+    <a href="{{site.baseurl}}/cases/">💁‍♂️Отзывы</a></span><br>
+  <span style="white-space: nowrap">
+    <a href="{{site.baseurl}}/contacts/">📞Контакты</a></span><br>
+  <span style="white-space: nowrap">
+    <a href="{{site.baseurl}}/archive/">📚Архив</a></span><br>
+  <span style="white-space: nowrap">
+    <a href="{{site.baseurl}}/memo/">💾Памятки</a></span><br>
+  <span style="white-space: nowrap">
+    <a href="{{site.baseurl}}/sign/">📅Запись на консультацию</a></span><br>
+</div>
   
   <!-- Другие виджеты сайдбара -->
