--- a/assets/css/_sass/_variables.scss
+++ b/assets/css/_sass/_variables.scss
@@ -1,6 +1,6 @@
 // Основная цветовая палитра
-$dark-orange: #FF8C00;
-$light-orange: #FFB900;
+$dark-orange: #087B8E;
+$light-orange: #0BA5BE;
 $dark-blue-gray: #2c3e50;
 $light-gray: #bdc3c7;
 $super-light-gray: #ecf0f1;
@@ -16,7 +16,7 @@ $sidebar-width: 320px;
 $content-padding-large: 120px;
 $content-padding-medium: 60px;
 $content-padding-small: 15px;
-$post-max-width: 740px;
+$post-max-width: 540px; //ширина content-container
 
 // Размеры элементов
 $logo-size-desktop: 80px;
