--- a/assets/css/_sass/_layout.scss
+++ b/assets/css/_sass/_layout.scss
@@ -17,7 +17,7 @@ html {
 body {
   height: 100%;
   font-family: $font-body;
-  font-size: 100%;
+  font-size: $font-size-base;
   line-height: 1.6;
   margin: 0;
   font-kerning: normal;
@@ -92,7 +92,7 @@ img {
   font-family: $font-heading;
   border-top: 1px solid black;
   width: 100%;
-  font-size: 0.8em;
+  font-size: $font-size-small;
   font-weight: 600;
   color: black;
   
