--- a/assets/css/_sass/_sidebar.scss
+++ b/assets/css/_sass/_sidebar.scss
@@ -105,7 +105,7 @@
     
     .widgettitle {
       margin: 0;
-      font-size: 16px;
+      font-size: $font-size-base;
       margin-bottom: 5px;
     }
     
@@ -120,7 +120,7 @@
       line-height: 1;
       
       a {
-        font-size: 15px;
+        font-size: $font-size-sidebar-link;
         color: black;
         text-decoration: none;
         font-family: $font-heading;
@@ -211,7 +211,7 @@
     opacity: 0.7;
     float: right;
     margin-right: 25%;
-    font-size: 0.8em;
+    font-size: $font-size-small;
     margin-top: 5px;
     
     a {
