--- a/assets/css/_sass/_variables.scss
+++ b/assets/css/_sass/_variables.scss
@@ -7,9 +7,18 @@ $super-light-gray: #ecf0f1;
 $black: #000000;
 $white: #FFFFFF;
 
+@font-face {
+    font-family: 'Optima Cyr';
+    src: url('http://127.0.0.1:4000/assets/css/fonts/Optima-Cyr.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+}
+
 // Шрифты
 $font-heading: "Source Sans Pro", sans-serif;
-$font-body: "PT Serif", serif;
+$font-body: "Alice", serif;
+//$font-body: "Fira Sans", serif;
 
 // Размеры сайта
 $sidebar-width: 320px;
